# pixora

./: .gitignore  .npmrc  LICENSE  README.es.md  README.md  README.pt-BR.md  index.html  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: compress.rs  exif.rs  mod.rs  pipeline.rs  remove_bg.rs  remove_wm.rs  resize.rs  save.rs  system.rs
src/components/: ActionsPanel.tsx  DonateModal.tsx  ExifModal.tsx  Header.tsx  ImageCard.tsx  ImageGrid.tsx  SettingsPanel.tsx  SplitView.tsx  UpdateAvailableModal.tsx
src/components/ui/: FormatCards.tsx  LoadingOverlay.tsx  Section.tsx  StatBar.tsx  Tooltip.tsx
src/hooks/: useBgModelStatus.ts  useFileDrop.ts  useProcessing.ts  useSaveExport.ts  useSplitDrag.ts  useUpdateCheck.ts
src/lib/: i18n.ts  langStore.ts  pipeline.ts  progressStore.ts  store.ts  systemStore.ts  themeStore.ts  updateChecker.ts  utils.ts
src/lib/bgRemoval/: local.ts
